--- a/src/Components/style/taskStyle.module.css
+++ b/src/Components/style/taskStyle.module.css
@@ -229,3 +229,16 @@ img.introImgTwo3 {
 span.likeP {
   padding: 20px;
 }
+
+
+.indicatortext {
+  position: absolute;
+  top: 20%;
+  bottom: 0;
+  left: 40%;
+  right: 0;
+  pointer-events: none;
+  color: white;
+  font-size: 100px;
+  font-family: "Calibri", "Calibri";
+}
