--- a/src/Components/style/taskStyle.module_adapt.css
+++ b/src/Components/style/taskStyle.module_adapt.css
@@ -5,8 +5,8 @@
   height: auto;
   margin: 0px;
   color: white;
-  font-size: 2vh;
-  font-family: "Calibri", "Calibri";
+  font-size: 1vh;
+  font-family: "Calibri", "Calibri",
 }
 
 .questions {
@@ -16,9 +16,11 @@
   align-items: center;
   height: auto;
   color: white;
-  font-size: 3vh;
+  font-size: 10vh;
   font-family: "Helvetica";
   font-weight: bold;
+
+  margin-top:20vh;
 }
 
 
@@ -34,17 +36,26 @@
   width: 100%;
 
   /* Center and scale the image nicely */
-  align-items: center;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   position: absolute;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
 }
 
-/* .textblock {
+/* .textblockOld {
+display: flex;
+justify-content: center;
+align-items: center;
+padding-top: 20px;
+padding-bottom: 20px;
+} */
+
+.textblock {
   display: inline-block;
   position: absolute;
   top: 0;
@@ -54,7 +65,7 @@
   margin: auto;
   width: 500px;
   height: 600px;
-} */
+}
 
 textarea {
   background-color: rgba(0, 0, 0, 0.5);
@@ -95,8 +106,8 @@ span.center {
   display: table;
   margin: 0 auto;
   font-weight: bold;
-  font-size: 25px;
-  padding-bottom: 20px;
+  font-size: 3vh;
+  padding-bottom: 2vh;
   position: relative;
 }
 span.centerOne{
@@ -111,7 +122,7 @@ span.centerOne{
 span.centerThree {
   display: table;
   margin: 0 auto;
-  padding-top: 30vh;
+  padding-top: 20%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -169,8 +180,12 @@ img.introImgTwo3 {
 
 .overlay {
   position: absolute;
-  top: 4vh;
-  right: 12vh;
+  top: 10%;
+  bottom: 0;
+  left: 40%;
+  right: 0;
+  height: 100%;
+  width: 100%;
   pointer-events: none;
   transition: .3s ease;
   background-color: transparent;
@@ -178,31 +193,14 @@ img.introImgTwo3 {
 
 .overlaytext {
   position: absolute;
-  top: 10vh;
+  top: 30%;
   bottom: 0;
-  left: 1vh;
+  left: 1%;
   right: 0;
   pointer-events: none;
   color: white;
-  font-size: 4vh;
+  font-size: 40px;
   font-family: "Calibri", "Calibri";
-}
-
-.overlaybar{
-  height: 100vh;
-  /* Full height */
-  width: 100vw;
-  /* Center and scale the image nicely */
-  position: absolute;
-}
-
-.overlaybarsecond{
-  height: 100%;
-  width: 1024px;
-  /* Full height */
-  width: 100vw;
-  /* Center and scale the image nicely */
-  position: absolute;
 }
 
 .container_1 {
