--- a/src/Components/style/taskStyle.module.css
+++ b/src/Components/style/taskStyle.module.css
@@ -44,6 +44,36 @@
   position: absolute;
 }
 
+.cockpitslider {
+  /* The image used */
+  background-image: url(../img/CockpitBlank.jpg);
+
+  min-height: 100%;
+  min-width: 1024px;
+
+  /* Full height */
+  height: auto;
+  width: 100%;
+
+  /* Center and scale the image nicely */
+  align-items: flex-end;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: absolute;
+}
+
+.slider {
+  padding-bottom: 100px
+}
+
+.slidertext {
+  padding-bottom: 500px
+}
+
 /* .textblock {
   display: inline-block;
   position: absolute;
