--- a/src/Components/style/quizStylesAdapt.css
+++ b/src/Components/style/quizStylesAdapt.css
@@ -1,4 +1,4 @@
-body {
+blockc {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -8,7 +8,7 @@ body {
 }
 * {
   font-family: "Verdana", cursive, sans-serif;
-  color: #ffffff;
+  color: #grey;
 }
 
 .body {
@@ -61,6 +61,7 @@ body {
 
 .question-count {
   margin-bottom: 20px;
+  color: white
 }
 
 .question-count span {
@@ -71,6 +72,8 @@ body {
   margin-bottom: 12px;
   align-items: flex-start;
   justify-content: flex-start;
+  color: white;
+  font-size: 4vh;
 }
 
 .timer-text {
