--- a/src/Components/style/taskStyle.module.css
+++ b/src/Components/style/taskStyle.module.css
@@ -301,3 +301,11 @@ span.likeP {
   background-color: rgba(0, 0, 0, 0.5);
   cursor: pointer;
 }
+
+.counter {
+  position: absolute;
+  right: 30px;
+  padding-top: 30px;
+  top: 0px;
+  font-size: 20px;
+}
