--- a/src/Components/style/quizStylesAdapt.css
+++ b/src/Components/style/quizStylesAdapt.css
@@ -7,7 +7,7 @@ blockc {
   -moz-osx-font-smoothing: grayscale;
 }
 * {
-  font-family: "Verdana", cursive, sans-serif;
+  font-family: "Calibri";
   color: #grey;
 }
 
