--- a/src/Components/style/taskStyle.module.css
+++ b/src/Components/style/taskStyle.module.css
@@ -79,17 +79,27 @@
 }
 
 .slider {
-  padding-bottom: 10vh
+  padding-bottom: 20vh
 }
 
 .slidertext {
-  padding-bottom: 70vh
+  padding-bottom: 77vh
 }
 
 .slidertextintro {
   padding-bottom: 75vh
 }
 
+.sliderEstimateBox {
+  border-style: solid;
+  border-color: white;
+  bottom: 2vh;
+  right: 39vw;
+  position: relative;
+  color: white;
+  font-size: 5vh;
+  font-family: "Calibri", "Calibri";
+}
 /* .textblock {
   display: inline-block;
   position: absolute;
@@ -145,6 +155,16 @@ span.center {
   padding-bottom: 20px;
   position: relative;
 }
+
+span.gif {
+  width: 20vh;
+  height: auto;
+  position: center;
+}
+
+
+
+
 span.centerOne{
   display: table;
   margin: 0 auto;
