--- a/src/Components/style/questStyle.css
+++ b/src/Components/style/questStyle.css
@@ -7,7 +7,7 @@
   height: 100vh;
   color: black;
   /* font-size: 20px; */
-  font-family: "Arial", "Arial",boldCenter;
+  font-family: "Calibri", "Calibri",boldCenter;
 }
 
 .sv_q_description {
