--- a/src/Components/style/quizStylesAdapt.css
+++ b/src/Components/style/quizStylesAdapt.css
@@ -1,13 +1,13 @@
 blockc {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Arial Neue',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 * {
-  font-family: "Arial";
+  font-family: "Calibri";
   color: #grey;
 }
 
