--- a/src/Components/style/taskStyle.module.css
+++ b/src/Components/style/taskStyle.module.css
@@ -6,7 +6,7 @@
   margin: 0px;
   color: white;
   font-size: 2.5vh;
-  font-family: "Arial", "Arial";
+  font-family: "Calibri", "Calibri";
 }
 
 .questions {
@@ -17,7 +17,7 @@
   height: auto;
   color: white;
   font-size: 3vh;
-  font-family: "Arial";
+  font-family: "Helvetica";
   font-weight: bold;
 }
 
@@ -29,7 +29,7 @@
   height: auto;
   color: white;
   font-size: 4vh;
-  font-family: "Arial";
+  font-family: "Helvetica";
   font-weight: bold;
 }
 
@@ -98,7 +98,7 @@
   position: relative;
   color: white;
   font-size: 5vh;
-  font-family: "Arial", "Arial";
+  font-family: "Calibri", "Calibri";
 }
 /* .textblock {
   display: inline-block;
@@ -251,7 +251,7 @@ img.introImgTwo3 {
   pointer-events: none;
   color: white;
   font-size: 4vh;
-  font-family: "Arial", "Arial";
+  font-family: "Calibri", "Calibri";
 }
 
 .overlaybar{
@@ -287,7 +287,7 @@ img.introImgTwo3 {
   justify-content: center;
   text-align: center;
   font-size: 50px;
-  font-family: "Arial", "Arial";
+  font-family: "Calibri", "Calibri";
 }
 
 .left {float: left;
@@ -301,7 +301,7 @@ img.introImgTwo3 {
   justify-content: center;
   text-align: center;
   font-size: 50px;
-  font-family: "Arial", "Arial";
+  font-family: "Calibri", "Calibri";
 }
 
 span.likeP {
@@ -318,7 +318,7 @@ span.likeP {
   pointer-events: none;
   color: white;
   font-size: 10vh;
-  font-family: "Arial", "Arial";
+  font-family: "Calibri", "Calibri";
 }
 
 .overlaycheck {
@@ -340,7 +340,7 @@ span.likeP {
   padding-top: 10vh;
   top: 0px;
   font-size: 30px;
-  font-family: "Arial", "Arial";
+  font-family: "Calibri", "Calibri";
   color: white;
 }
 
