--- a/src/Components/style/barstyles.css
+++ b/src/Components/style/barstyles.css
@@ -5,7 +5,7 @@
 
 .progress {
   background-color: #FFFFFF;
-  border-radius: 3px;
+  border-radius: 0.4vh;
   box-shadow: none;
 }
 
@@ -14,17 +14,17 @@
   width: 5vh;
   height: 15vh;
   display: inline-block;
-  margin-right: 10px;
+  margin-right: 1vw;
 }
 
 .progress {
-  height: 20px;
-  margin-bottom: 20px;
+  height: 2vh;
+  margin-bottom: 2vh;
   overflow: hidden;
   background-color: #ABABAB;
-  border-radius: 4px;
-  -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
-  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+  border-radius: 1vw;
+  -webkit-box-shadow: inset 0 0.1vh 0.2vh rgba(0, 0, 0, 0.1);
+  box-shadow: inset 0 0.1vh 0.2vh rgba(0, 0, 0, 0.1);
 }
 
 .progress.vertical > .progress-bar {
@@ -42,13 +42,13 @@
   float: left;
   width: 0;
   height: 100%;
-  font-size: 12px;
-  line-height: 20px;
+  font-size: 2vh;
+  line-height: 2vh;
   color: #fff;
   text-align: center;
   background-color: #FFFFFF;
-  -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
-  box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: inset 0 -0.1vh 0 rgba(0, 0, 0, 0.15);
+  box-shadow: inset 0 -0.1vh 0 rgba(0, 0, 0, 0.15);
   -webkit-transition: width 0.6s ease;
   -o-transition: width 0.6s ease;
   transition: width 0.6s ease;
