--- a/src/Components/style/gifplayer.scss
+++ b/src/Components/style/gifplayer.scss
@@ -31,30 +31,36 @@ $gif_btn_text_content: 'Play' !default;
 .gif_player {
   display: inline-block;
   position: relative;
+  align-items: center;
+  text-align: center;
   user-select: none;
+  justify-content: center;
   -webkit-touch-callout: none;
   -webkit-tap-highlight-color: transparent;
 
   .play_button {
     background-color: $gif_btn_bg_color;
     border: $gif_btn_border_width $gif_btn_border_style $gif_btn_border_color;
-    border-radius: 50%;
+    // border-radius: 50%;
     box-shadow: 0 0 0 3px $gif_btn_box_shadow_color;
     color: $gif_btn_text_color;
     cursor: pointer;
     font-family: $gif_btn_font_family;
-    font-size: 26px;
-    left: 11.5vw;
+    font-size: 2vh;
+    position: relative;
+    text-align: center;
+    justify-content: center;
+// top:6vh;
+// left:6vw;
+    // width:4vw;
     opacity: $gif_btn_regular_opacity;
-    padding: 14px 10px;
-    position: absolute;
-    top: 17vh;
-    transform: translate(-50%, -50%) scale(1) rotate($gif_btn_paused_rotation);
+    // padding: 0.5vw 0.5vw;
+    // transform: translate(-50%, -50%) scale(1) rotate($gif_btn_paused_rotation);
     transition: transform $gif_btn_transition_duration, opacity $gif_btn_transition_duration;
 
     &:hover {
       background-color: $gif_btn_bg_color_hover;
-      box-shadow: 0 0 0 3px $gif_btn_box_shadow_color_hover;
+      box-shadow: 0 0 0 0.3vh $gif_btn_box_shadow_color_hover;
     }
 
     &::after {
