--- a/src/Components/style/taskStyle.module.css
+++ b/src/Components/style/taskStyle.module.css
@@ -66,7 +66,7 @@
   background-image: url(../img/CockpitBlank.jpg);
 
   min-height: 100%;
-  min-width: 1024px;
+  min-width: 10vw;
 
   /* Full height */
   height: auto;
@@ -83,8 +83,13 @@
   position: absolute;
 }
 
+
 .slider {
-  padding-bottom: 20vh
+  max-width: 7vw;
+  min-width: 7vw;
+  padding-bottom: 15vh;
+  table-layout: fixed;
+  pointer-events: none;
 }
 
 .slidertext {
